# brak

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_access.cpp  benchmark_nested_for.cpp  benchmark_parallel_for.cpp  benchmark_subview.cpp
cmake/modules/: Config.cmake.in  dependencies.cmake  install.cmake  options.cmake
compile_benchmarks/: CMakeLists.txt  README.md  compile_benchmark_array.cpp  compile_benchmark_subview.cpp  compile_benchmark_view.cpp  compile_benchmark_view_unmanaged.cpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example_heat_equation_ref.cpp  example_heat_equation_wrapper_array.cpp  example_heat_equation_wrapper_subview.cpp  utils.hpp
include/: CMakeLists.txt
include/brak/: compute.hpp  kokkos_view.hpp  subview.hpp  view.hpp  wrapper_array.hpp  wrapper_subview.hpp
tests/: CMakeLists.txt  test_base.hpp  test_compute.cpp  test_subview.cpp  test_wrapper_array.cpp  test_wrapper_subview.cpp
